# Hercules

./: .gitignore  README.md  requirements.txt
Hercules/: .env.example  pyproject.toml  start.py
Hercules/backend/: __init__.py  app.py  models.py  shared_storage.py  websocket_manager.py
Hercules/crews/: __init__.py
Hercules/crews/enumeration_crew/: enumeration_crew.py
Hercules/crews/exploitation_crew/: exploitation_crew.py
Hercules/crews/recon_crew/: recon_crew.py
Hercules/flows/: pentest_flow.py
Hercules/frontend/: index.html  package-lock.json  package.json
Hercules/reports/: report_31b7747f.html  report_3a27bb86.html  report_3c5cfe3d.html  report_4a792729.html  report_4ccff139.html  report_62c33ea6.html  report_645ea0f6.html  report_6bf097be.html  report_7328d6b4.html  report_7966fd95.html  report_81ac3911.html  report_85a7eae4.html  report_8833c89c.html  report_8950060e.html  report_9ba68763.html  report_dd1fe4cb.html  report_ef0d9ead.html  report_f001c3e6.html  shared_storage_15539bb5.md  shared_storage_913ff9cd.md  shared_storage_b0b6ee46.md  shared_storage_ff3e2fea.md  state_31b7747f.json  state_3a27bb86.json  state_3c5cfe3d.json  state_4a792729.json  state_4ccff139.json  state_62c33ea6.json  state_645ea0f6.json  state_6bf097be.json  state_7328d6b4.json  state_7966fd95.json  state_81ac3911.json  state_85a7eae4.json  state_8833c89c.json  state_8950060e.json  state_9ba68763.json  state_dd1fe4cb.json  state_ef0d9ead.json  state_f001c3e6.json
MCP/: SecLists  pyproject.toml  server.py
MCP/templates/: .gitkeep
MCP/tools/: __init__.py  _base.py
(+66 files in other folders)
