[project]
name = "hercules"
version = "1.0.0"
description = "Automated Penetration Testing & CTF Solving Agent Suite powered by CrewAI"
requires-python = ">=3.12,<3.14"
dependencies = [
    "crewai[google-genai,tools]",
    "crewai-tools[mcp]",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "python-dotenv",
    "pydantic>=2.0.0",
    "mcp",
    "litellm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*", "crews*", "flows*"]
